# Quadruped-Robot-Dynamo-one

./: .gitattributes  .gitignore  README.md
controller/: CMakeLists.txt  package.xml
controller/src/: dynamo_control_gazebo2.py
controller/src/Controller/: Rest_controller.py  RobotController2.py  StateCommand.py
controller/src/RoboticsUtilities/: Transformations.py  utils.py
dynamo_one_control/dynamo_one_control/: PS4_control.py  State_estimate.py
dynamo_one_control/dynamo_one_control/Controller/: PID_control_balance.py
dynamo_one_control/dynamo_one_control/Desired/: Base_Foothold_trajectory.py
dynamo_one_control/dynamo_one_control/model/: Kinematic_Model.py
dynamo_one_description/: CMakeLists.txt  package.xml
dynamo_one_description/config/: position_control.yaml  visualize_urdf.rviz
dynamo_one_description/launch/: rviz_control.launch.py
dynamo_one_description/meshes/: Body.dae  Body1.dae  MirrorUpperLeg.dae  UpperLeg.dae
dynamo_one_description/src/: initialjointtorque.py
dynamo_one_description/xacro/: gazebo_torque.xacro  leg.xacro  ros2_control.xacro
gazebo_sim/: package.xml
gazebo_sim/worlds/: world.sdf
python_controller/: package.xml  setup.py
python_controller/launch/: dynamo_one_controlV1.launch.py  dynamo_one_controlV2.launch.py
python_controller/python_controller/: Balance_control.py  Dynamo_controlV2.py  Foot_trajectory_rviz.py  Gait_control_Rviz.py  Leg_PIDController.py  PS4_Controller.py  PS4_Desired.py  PS4_controllerV2.py  Raibert_Heuristic.py  Simulation_MPC_SRBM.py  ps4_joint_controller.py
python_controller/python_controller/Controller/: InverseDynamic.py  utils.py
python_controller/python_controller/Filter/: moving_window_filter.py
python_controller/python_controller/FootTrajectory/: CPG_Network.py
python_controller/python_controller/robot/: InverseDynamic.py  utilize.py
remote_control/: package.xml
remote_control/src/: ramped_joystick.py
src/controller/launch/: robot_controller.launch.py
src/controller/src/: dynamo_control_gazebo.py
src/dynamo_one_control/: package.xml  setup.cfg  setup.py
src/dynamo_one_control/config/: parameter.yaml
src/dynamo_one_control/dynamo_one_control/: Body_control.py  Foot_generator.py  Leg_PD_Control.py  MPC_Solve_Force.py  PD_Control_Leg.py  PS4_Desired.py  Simulation_MPC_Script.py
src/dynamo_one_control/launch/: body_control.launch.py  desired.launch.py  gait_control.launch.py
src/dynamo_one_description/config/: robot_unitree_control.yaml  torque_control.yaml
src/dynamo_one_description/launch/: gazebo_position.launch.py  gazebo_torque.launch.py  ps4_test.launch.py  visualize.launch.py
src/dynamo_one_description/meshes/: Hip.dae  UpperLeg_left.dae  UpperLeg_right.dae  lowerleg.dae
src/dynamo_one_description/src/: Initialjointposition.py
src/dynamo_one_description/urdf/: dynamo_one.urdf
src/dynamo_one_description/worlds/: world.sdf
src/dynamo_one_interfaces/: CMakeLists.txt  package.xml
src/gazebo_sim/: CMakeLists.txt
src/remote_control/: CMakeLists.txt
src/test_urdf/: CMakeLists.txt  package.xml
src/test_urdf/config/: gazebo.yaml  robot_control.yaml  visualize_urdf.rviz
src/test_urdf/launch/: visualize.launch.py
src/test_urdf/urdf/: test.urdf
src/test_urdf/xacro/: const.xacro  gazebo.xacro  gazebo_classic.xacro  leg.xacro  robot.xacro  ros2_control.xacro  transmission.xacro
(+49 files in other folders)
