<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_urdf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yin@todo.todo">yin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>
  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend> <!-- Replaced gazebo_ros2_pkgs with gazebo_ros -->
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>

  <exec_depend>ros2_controllers</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
